[tool.poetry]
name = "exapmle"
version = "0.1.0"
description = ""
authors = ["Bulat Galimov <ganza.alliance@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.lint.dependencies]
mypy = "^1.11.2"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
